name:                hogldev
version:             0.1.0.0
description:         The port of ogldev's tutorials
synopsis:            OpenGL, Graphics
license:             MIT
license-file:        LICENSE
author:              Ilya Smelkov
maintainer:          triplepointfive@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      common/Hogldev
                     , common
  exposed-modules:     Hogldev.Math3D
                     , Hogldev.Pipeline
                     , Hogldev.Utils
  build-depends:       base >=4.6 && <4.9
                     , OpenGL
  default-language:    Haskell2010

executable tutorial01
  main-is:             Tutorial01.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
  hs-source-dirs:      tutorial01/
  default-language:    Haskell2010

executable tutorial02
  main-is:             Tutorial02.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
  hs-source-dirs:      tutorial02/
  default-language:    Haskell2010

executable tutorial03
  main-is:             Tutorial03.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
  hs-source-dirs:      tutorial03/
  default-language:    Haskell2010

executable tutorial04
  main-is:             Tutorial04.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
  hs-source-dirs:      tutorial04/
  default-language:    Haskell2010

executable tutorial05
  main-is:             Tutorial05.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
  hs-source-dirs:      tutorial05/
  default-language:    Haskell2010

executable tutorial06
  main-is:             Tutorial06.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial06/
  default-language:    Haskell2010

executable tutorial07
  main-is:             Tutorial07.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial07/
  default-language:    Haskell2010

executable tutorial08
  main-is:             Tutorial08.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial08/
  default-language:    Haskell2010

executable tutorial09
  main-is:             Tutorial09.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial09/
  default-language:    Haskell2010

executable tutorial10
  main-is:             Tutorial10.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial10/
  default-language:    Haskell2010

executable tutorial11
  main-is:             Tutorial11.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial11/
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/triplepointfive/hogldev
