name:                hogldev
version:             0.1.0.0
description:         The port of ogldev's tutorials
synopsis:            OpenGL, Graphics
license:             MIT
license-file:        LICENSE
author:              Ilya Smelkov
maintainer:          triplepointfive@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      common/Hogldev
                     , common
  exposed-modules:     Hogldev.Math3D
                     , Hogldev.ShadowMapFBO
                     , Hogldev.CubemapTexture
                     , Hogldev.Pipeline
                     , Hogldev.LightingTechnique
                     , Hogldev.Mesh
                     , Hogldev.Utils
                     , Hogldev.Camera
                     , Hogldev.RandomTexture
                     , Hogldev.Technique
                     , Hogldev.Texture
                     , Hogldev.Vertex
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL >= 2.11.0.1
                     , linear
                     , GLUtil
                     , filepath
                     , soten
                     , random
                     , vector
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial01
  main-is:             Tutorial01.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
  hs-source-dirs:      tutorial01/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial02
  main-is:             Tutorial02.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , hogldev
  hs-source-dirs:      tutorial02/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial03
  main-is:             Tutorial03.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , hogldev
  hs-source-dirs:      tutorial03/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial04
  main-is:             Tutorial04.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , hogldev
  hs-source-dirs:      tutorial04/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial05
  main-is:             Tutorial05.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , hogldev
  hs-source-dirs:      tutorial05/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial06
  main-is:             Tutorial06.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial06/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial07
  main-is:             Tutorial07.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial07/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial08
  main-is:             Tutorial08.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial08/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial09
  main-is:             Tutorial09.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial09/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial10
  main-is:             Tutorial10.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial10/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial11
  main-is:             Tutorial11.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial11/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial12
  main-is:             Tutorial12.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial12/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial13
  main-is:             Tutorial13.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial13/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial14
  main-is:             Tutorial14.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial14/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial15
  main-is:             Tutorial15.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial15/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial16
  main-is:             Tutorial16.hs
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial16/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial17
  main-is:             Tutorial17.hs
  other-modules:       LightingTechnique
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
  hs-source-dirs:      tutorial17/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial18
  main-is:             Tutorial18.hs
  other-modules:       LightingTechnique
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
                     , split
  hs-source-dirs:      tutorial18/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial19
  main-is:             Tutorial19.hs
  other-modules:       LightingTechnique
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
                     , split
  hs-source-dirs:      tutorial19/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial20
  main-is:             Tutorial20.hs
  other-modules:       LightingTechnique
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
                     , split
  hs-source-dirs:      tutorial20/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial21
  main-is:             Tutorial21.hs
  other-modules:       LightingTechnique
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
                     , split
  hs-source-dirs:      tutorial21/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial22
  main-is:             Tutorial22.hs
  other-modules:       Mesh
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
                     , split
                     , soten
                     , vector
                     , filepath
  hs-source-dirs:      tutorial22/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial23
  main-is:             Tutorial23.hs
  other-modules:       Mesh
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
                     , split
                     , soten
                     , vector
                     , filepath
  hs-source-dirs:      tutorial23/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial24
  main-is:             Tutorial24.hs
  other-modules:       Mesh
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
                     , split
                     , soten
                     , vector
                     , filepath
  hs-source-dirs:      tutorial24/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial25
  main-is:             Tutorial25.hs
  other-modules:       Mesh
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
                     , split
                     , soten
                     , vector
                     , filepath
  hs-source-dirs:      tutorial25/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial26
  main-is:             Tutorial26.hs
  other-modules:       Mesh
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
                     , split
                     , soten
                     , vector
                     , filepath
  hs-source-dirs:      tutorial26/
  default-language:    Haskell2010
  ghc-options:         -W

executable tutorial27
  main-is:             Tutorial27.hs
  other-modules:       Mesh
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
                     , split
                     , soten
                     , vector
                     , filepath
  hs-source-dirs:      tutorial27/
  default-language:    Haskell2010
  ghc-options:         -W

-- executable tutorial28
--   main-is:             Tutorial28.hs
--   other-modules:       Mesh
--   build-depends:       base >=4.6 && <4.9
--                      , GLUT
--                      , OpenGL
--                      , GLUtil
--                      , hogldev
--                      , split
--                      , soten
--                      , vector
--                      , filepath
--   hs-source-dirs:      tutorial28/
--   default-language:    Haskell2010
--   ghc-options:         -W

executable tutorial29
  main-is:             Tutorial29.hs
  other-modules:       Mesh
  build-depends:       base >=4.6 && <4.9
                     , GLUT
                     , OpenGL
                     , GLUtil
                     , hogldev
                     , split
                     , soten
                     , vector
                     , filepath
  hs-source-dirs:      tutorial29/
  default-language:    Haskell2010
  ghc-options:         -W

source-repository head
  type:     git
  location: git://github.com/triplepointfive/hogldev
